--- a/config/scaffolding/SIQA_GIT_6825Project.yml
+++ b/config/scaffolding/SIQA_GIT_6825Project.yml
@@ -7,6 +7,15 @@ packages:
   gitUrl: https://github.com/rimabarman
   gitUsername: rimabarman
   gitBranch: main
+services:
+- serviceName: project.siqa_git_6825.integrations:AlertsCRTandERT
+  packages:
+  - name: SIQA_GIT_6825Project
+    version: "1.0"
+- serviceName: pub.alert:emit
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2061
 configurationVariables:
   jdbc.jdbcTestPool.waitingThread: "0"
   jdbc.jdbcTestPool.minConns: "0"
