--- a/config/scaffolding/SIQA_GIT_6825Project.yml
+++ b/config/scaffolding/SIQA_GIT_6825Project.yml
@@ -12,6 +12,11 @@ packages:
   gitUrl: https://github.com/Karthik-V-IBM-10
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
+- name: SIQA_OriginTest_OnPremAssets
+  gitServerName: SIQAGitHub
+  gitUrl: https://github.com/vijetadixit
+  gitUsername: manoj-jannu-IBM
+  gitBranch: Test2
 services:
 - serviceName: project.siqa_git_6825.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:DBInsertNew
   packages:
